-added lightbox & error handling

--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,1 @@
-.prof-header {
-  color: salmon;
-}
-
-.remove-prof {
-  padding: 8px 12px;
-  color: white;
-  background-color: #333;
-  border: thin solid blue;
-  text-transform: uppercase;
-  cursor: pointer;
-  border-radius: 8px;
-}
-.remove-prof:hover {
-  background-color: blue;
-}
-
-.prof-button-modifier {
-  text-decoration: none;
-}
-
-.bio-data {
-  display: none;
-}
-
-.show-bio {
-  display: block !important;
-}
-
-/*# sourceMappingURL=main.css.map */
+.mini-header{color:salmon}.remove-mini{padding:8px 12px;color:#fff;background-color:#333;border:thin solid #4e4f50;text-transform:uppercase;cursor:pointer;border-radius:8px}.remove-mini:hover{background-color:#c5c6e2}.mini-button-modifier{text-decoration:none}.bio-data{display:none}.show-bio{display:block !important}.mini-data{display:flex;margin:0 10px;justify-content:center;flex-direction:column;align-items:center;background-color:#aab4b6;margin-top:2em;margin-bottom:2em;padding-top:1em}.mini-data a{cursor:pointer;text-decoration:none;color:#fff;font-family:"Gill Sans","Gill Sans MT",Calibri,"Trebuchet MS",sans-serif;margin:.2em}.mini-data a:hover{color:#008cff}.mini-container{display:flex;justify-content:center;flex-direction:row;flex-wrap:wrap}.mini-hidden{display:none}@media screen and (min-width: 768px){body{background-color:#323747}.user{flex:1}.user img{max-width:350px}}@media screen and (min-width: 375px){body{background-color:#323747}.user{flex:1}.user img{max-width:350px}}@media screen and (min-width: 0px){body{background-color:#323747}.user{flex:1}.user img{max-width:350px}}h1{font-family:"Gill Sans","Gill Sans MT",Calibri,"Trebuchet MS",sans-serif;color:#ecebf0;font-size:2.5em}body{font-family:"Segoe UI",Tahoma,Geneva,Verdana,sans-serif;font-size:16px;background-color:#f8f8fa;margin:0 0 50px 0;border:0}.box{width:30px;height:30px;border-radius:20px}.box2{width:30px;height:30px;border-radius:50%}.lightbox{position:absolute;top:0;width:100vw;height:100vh;background-color:rgba(0,0,0,.85);display:none}.show-lightbox{display:block}.Model{color:#fcfcfc}.Type{color:#ccc}#mainHeader{margin-top:20px;padding-left:20px;display:flex;flex-direction:row;justify-content:flex-start;border-bottom:solid 3px #ddd}.center{text-align:center}nav{margin:0}nav .nav-item{display:inline-block;margin:0 5px;background-color:#86b8be;border-radius:10px;padding:5px 10px}nav .nav-item a{cursor:pointer;text-decoration:none;color:#fff;font-family:"Gill Sans","Gill Sans MT",Calibri,"Trebuchet MS",sans-serif}nav .nav-item a:hover{color:#008cff}#topBar{background-color:#19191a;height:3em;text-align:center}footer{position:fixed;bottom:0;background-color:#050418;width:100%;text-align:end;box-sizing:border-box;padding:10px;color:#fff}.lightbox-con{width:100%;height:100vh;margin-bottom:-100vh;position:sticky;left:0;top:0;display:flex;justify-content:center;align-items:center;flex-direction:row;backdrop-filter:blur(3px)}.lightbox-con-disabled{display:none;pointer-events:none}.mini-info{background-color:#fff;padding:3em;border-radius:1em}.errorContainer{background-color:#ce3232;text-align:center;padding:5px;color:#300000}.errorContainer-hidden{display:none}/*# sourceMappingURL=main.css.map */
