--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -2,15 +2,15 @@
 
 h1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-    color: white;
+    color: rgb(236, 235, 240);
+    font-size: 2.5em;
 }
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: $main-font-size;
 
-    background-color: rgb(56, 107, 173);
+    background-color: rgb(248, 248, 250);
 
     margin: 0 0 50px 0; 
     border: 0;
@@ -43,11 +43,11 @@ body {
 	display: block;
 }
 
-.Name {
+.Model {
     color: rgb(252, 252, 252);
 }
 
-.Description {
+.Type {
     color: rgb(204, 204, 204);
 }
 
@@ -59,4 +59,8 @@ body {
 	flex-direction: row;
   	justify-content: flex-start;
     border-bottom: solid 3px #DDD;
+}
+
+.center {
+    text-align: center;
 }
